Added full name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div
             class="col-12 col-md-10 d-flex flex-column flex-justify-center flex-items-center flex-md-items-start pl-md-4">
             <h1 class="text-normal lh-condensed">Hello World</h1>
-            <p class="h4 color-fg-muted text-normal mb-2">My name is Shashank.</p>
+            <p class="h4 color-fg-muted text-normal mb-2">My name is Shashank Srivastava.</p>
             <a class="color-fg-muted text-small" href="#url">https://github.com/about</a>
         </div>
     </div>
