--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <div class="d-flex flex-column flex-md-row flex-items-center flex-md-items-center">
         <div class="col-2 d-flex flex-items-center flex-items-center flex-md-items-start">
-            <center> <img class="width-full avatar mb-2 mb-md-0" src="https://github.com/github.png" alt="github" />
-            </center>
+            <img class="width-full avatar mb-2 mb-md-0" src="https://github.com/github.png" alt="github" />
         </div>
         <div
             class="col-12 col-md-10 d-flex flex-column flex-justify-center flex-items-center flex-md-items-start pl-md-4">
